<resources>
    <string name="dollar">$</string>
    <string name="pct">%</string>
    <string name="two_part">%1$s %2$s</string>
    <string name="two_part_ns">%1$s%2$s</string>

    <string name="app_name">Real Cost</string>

    <string name="income">Monthly Income:</string>
    <string name="expenses">Monthly Expenses:</string>
    <string name="net_income">Net Income:</string>
    <string name="hours_worked">Hours Worked:</string>
    <string name="pre_hours">Gross Hourly Wage:</string>
    <string name="hours_divided">Net Hourly Wage:</string>

    <string name="rent">Rent:</string>
    <string name="food">Groceries:</string>
    <string name="bills">Bills:</string>
    <string name="misc">Miscellaneous:</string>
    <string name="total">Net Income:</string>

    <string name="item_cost">Purchase Cost:</string>
    <string name="pre_hours_cost">Hours Needed:</string>
    <string name="real_hours_cost">Actual Hours Needed:</string>

    <string name="percentage">Percent of Real Income:</string>

    <string name="broke">You\'re broke!</string>

    <string name="about">About</string>
    <string name="description">This is a simple calculator designed to highlight the real cost of purchases when compared to your net income. I often fall into the trap of, \"I made X amount this month, of course I can afford this!\" while conveniently forgetting my bills.\n\nThe formula is a straight percentage multiplier. For example, if your income is $2000 and your expenses are $1500, you are left with $500. A $20 purchase would thus, relative to your net income, cost four times as much, or $80. </string>
</resources>
