<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/Dark_White">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/sign_one"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/sign_two"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_one"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/sign_three"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_two"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/sign_four"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_three"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/sign_five"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_four"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/sign_six"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="238dp"
            android:layout_marginEnd="114dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/income_text"
            android:text="@string/income"
            android:textSize="18.5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
        </TextView>

        <EditText
            android:id="@+id/income_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="number"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/darkGreen"
            android:paddingBottom="6dp"
            android:maxLength="7" />

        <TextView
            android:id="@+id/expenses_text"
            android:text="@string/expenses"
            android:textSize="18.5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/income_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
        </TextView>

        <EditText
            android:id="@+id/expenses_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="number"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="32dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/Red_Alt"
            android:paddingBottom="6dp"
            android:maxLength="7"/>

        <TextView
            android:id="@+id/net_income_text"
            android:text="@string/net_income"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expenses_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
        </TextView>

        <TextView
            android:id="@+id/net_income"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expenses_edit"
            android:inputType="number"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:gravity="center"
            android:textColor="@color/black">
        </TextView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/net_income"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:background="@color/black">
        </View>

        <TextView
        android:id="@+id/hours_worked_text"
        android:text="@string/hours_worked"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp">
    </TextView>

        <EditText
            android:id="@+id/hours_worked"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="number"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="112dp"
            android:paddingBottom="6dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:gravity="center"
            android:textColor="@color/black">
        </EditText>

        <TextView
            android:id="@+id/gross_wage_text"
            android:text="@string/pre_hours"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hours_worked_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
        </TextView>

        <TextView
            android:id="@+id/gross_wage"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hours_worked"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:gravity="center"
            android:textColor="@color/darkGreen">
        </TextView>

        <TextView
            android:id="@+id/net_wage_text"
            android:text="@string/hours_divided"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gross_wage_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp">
        </TextView>

        <TextView
            android:id="@+id/net_wage"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gross_wage"
            android:inputType="number"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:gravity="center"
            android:textColor="@color/Red_Alt">
        </TextView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/net_wage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:background="@color/black">
        </View>

        <TextView
            android:id="@+id/purchase_text"
            android:text="@string/item_cost"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            android:layout_marginStart="4dp"
            android:layout_marginTop="7dp">
        </TextView>

        <EditText
            android:id="@+id/purchase_cost"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="number"
            android:layout_marginTop="226dp"
            android:layout_marginEnd="12dp"
            android:paddingBottom="6dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            android:gravity="center"
            android:maxLength="5"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/hours_cost_text"
            android:text="@string/pre_hours_cost"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchase_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp">
        </TextView>

        <TextView
            android:id="@+id/hours_cost"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchase_cost"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/darkGreen" />

        <TextView
            android:id="@+id/real_hours_cost_text"
            android:text="@string/real_hours_cost"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hours_cost_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="7.5dp">
        </TextView>

        <TextView
            android:id="@+id/real_hours_cost"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hours_cost"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/Red_Alt" />

        <TextView
            android:id="@+id/percentage_text"
            android:text="@string/percentage"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_hours_cost_text"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
        </TextView>

        <TextView
            android:id="@+id/percentage"
            android:layout_width="100dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_hours_cost"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="0"
            android:textCursorDrawable="@drawable/cursor"
            android:background="@drawable/edit_box"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/Red_Alt"
            android:maxLength="7"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/percentage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:background="@color/black">
        </View>

        <Button
            android:id="@+id/about"
            android:text="@string/about"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/percentage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="12dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

